--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,8 @@
     "description": "Replaces words on pages with Amberlynn Reid-ified versions. E.g. girl -> gorl.",
     "manifest_version": 3,
     "author": "ps4star",
-    "default_locale": "en",
-    "action": {
-        "default_title": "Gorlify"
-    },
-    "permissions": ["activeTab", "scripting"],
-    "background": {
-        "service_worker": "background.js"
-    }
+    "content_scripts": [{
+        "js": ["content.js"],
+        "matches": ["<all_urls>"]
+    }]
 }
